recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: '(' expected but identifier found.
if steps=0 return
   ^Spiral:11: error: illegal start of simple expression
}
^